--- a/package.json
+++ b/package.json
@@ -263,7 +263,11 @@
     "electron-debug": "^2.1.0",
     "electron-log": "^3.0.4",
     "electron-updater": "^4.0.6",
+    "exif-parser": "^0.1.12",
+    "filesize": "^5.0.2",
+    "get-mp3-duration": "^1.0.0",
     "history": "^4.9.0",
+    "mp3-duration": "^1.1.0",
     "node-id3": "^0.1.11",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
